[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "objectify-sdk"
version = "0.1.0"
description = "Python SDK for the Objectify multi-tenant Objects Platform API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "Objectify", email = "support@objectify.cloud" }]
keywords = ["objectify", "api", "sdk", "multi-tenant"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Typing :: Typed",
]
dependencies = ["httpx>=0.24.0,<1.0.0", "pydantic>=2.0.0,<3.0.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21", "respx>=0.20"]

[project.urls]
Homepage = "https://objectify.cloud"
Documentation = "https://api.objectify.cloud/docs"

[tool.hatch.build.targets.wheel]
packages = ["objectify"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
